# inno_hr

./: .env_sample  .gitignore  main.py  pyproject.toml  utils.py
aiclient/: client.py  utils.py
database/: __init__.py  client.py  schemas.py
